fixed parallex gallery overflow issue

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,4 +1,5 @@
 *{
+  font-size: 1.2rem;
   box-sizing: border-box;
     
 }
